<resources>
    <string name="app_name">ProjectBidu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">TODO</string>
    <string name="filter">TODO</string>
    <string name="cart">TODO</string>
    <string name="search">TODO</string>
    <string name="filter1">TODO</string>
    <string name="date1">TODO</string>
    <string name="product">TODO</string>
    <string name="checklike">TODO</string>
    <string name="textNew">New</string>
    <string name="_12">12%</string>
    <string name="seller">TODO</string>
    <string name="_1">1</string>
    <string name="rank">TODO</string>
    <string name="_3">3</string>
    <string name="person_mandaley">Person Mandaley</string>
    <string name="click_your_filter">Click your filter</string>
    <string name="price">Price</string>
    <string name="trend">Trend</string>
    <string name="style">Style</string>
    <string name="exit">Exit</string>
    <string name="filter2">Filter</string>
    <string name="click_date">Click date</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="confirm">Confirm</string>
    <string name="iv">TODO</string>
    <string name="ranking_page">Ranking Page</string>
</resources>