<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_filter"
    android:layout_margin="16dp"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/tv_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/click_your_filter"
        android:gravity="center"
        android:background="@drawable/custom_textview_filter"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rb_price"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/price"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rb_trend"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_trend"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/trend"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rb_style"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/style"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="150dp"
            android:paddingLeft="150dp"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_confirm_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingLeft="50dp"
            android:text="@string/filter2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>